# cmake-package-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.config/: nextest.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  test-results.yaml
cmake/: cmake_version.cmake  find_package.cmake
src/: cmake.rs  lib.rs  version.rs
tests/: tests.rs
tests/common/: mod.rs
tests/common/cmake_old/: cmake  cmake.bat
